[package]
name = "kelp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
tokio = { version = "1.45.1", features = ["full", "tracing"] }
neptune-cash = { git = "https://github.com/Neptune-Crypto/neptune-core.git" }
neptune-rpc-client = { git = "https://github.com/Neptune-Crypto/neptune-core.git" }
