[package]
name = "kelp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
tokio = { version = "1.45.1", features = ["full", "tracing"] }
neptune-cash = { git = "https://github.com/Neptune-Crypto/neptune-core.git", rev = "0af13688a7e2cfe0f19dfb92e97be53ed1b8f3fc" }
neptune-rpc-client = { git = "https://github.com/Neptune-Crypto/neptune-core.git", rev = "0af13688a7e2cfe0f19dfb92e97be53ed1b8f3fc" }
rustyline = "17.0.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"